[gd_scene load_steps=6 format=3 uid="uid://dftqn4r1p61ae"]

[ext_resource type="Script" path="res://Interface/MainMenu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://qr5lh0sxjvx6" path="res://Interface/StartMenu.tscn" id="2"]

[sub_resource type="Animation" id="1"]
resource_name = "toOptions"

[sub_resource type="Animation" id="2"]
resource_name = "toWorldMap"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5kx0j"]
_data = {
"toOptions": SubResource("1"),
"toWorldMap": SubResource("2")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="StartMenuVBox" parent="." instance=ExtResource("2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 0

[node name="SceneAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5kx0j")
}

[connection signal="button_up" from="StartMenuVBox/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="StartMenuVBox/LoadoutButton" to="." method="_on_LoadoutButton_button_up"]
[connection signal="button_up" from="StartMenuVBox/OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="StartMenuVBox/QuitButton" to="." method="_on_QuitButton_button_up"]

[editable path="StartMenuVBox"]
